apps/dev/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: app
  annotations:
    #nginx.ingress.kubernetes.io/ssl-redirect: true
    #nginx.ingress.kubernetes.io/rewrite-target: /oauth2
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: true
    #cert-manager.io/cluster-issuer: ca-issuer
    # nginx.ingress.kubernetes.io/auth-signin: "https://oauth2-proxy.systemtracker.no-ip.org/oauth2/start?rd=$scheme://$best_http_host$request_uri"
    # # That's what will be used in REAL LIFE
    # # nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy.localtest.me/oauth2/auth
    # # but because of https://github.com/kubernetes/ingress-nginx/issues/3665
    # nginx.ingress.kubernetes.io/auth-url: "https://oauth2-proxy.systemtracker.no-ip.org/oauth2/auth"
    #nginx.ingress.kubernetes.io/auth-response-headers: "x-auth-request-user, x-auth-request-email, x-auth-request-access-token, Authorization"
    #nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   auth_request_set $name_upstream_1 $upstream_cookie__oauth2_proxy_1;

    #   access_by_lua_block {
    #     if ngx.var.name_upstream_1 ~= "" then
    #       ngx.header["Set-Cookie"] = "_oauth2_proxy_1=" .. ngx.var.name_upstream_1 .. ngx.var.auth_cookie:match("(; .*)")
    #     end
    #   }
    #   proxy_set_header Authorization $http_authorization;
spec:
  ingressClassName: nginx
  #tls:
  #- hosts:
  #    - nginx.systemtracker.no-ip.org
  #  secretName: nginx-tls
  rules:
  - host: nginx.systemtracker.no-ip.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
